Improve AppConfigMonitor to try to stop it failing in gh actions